--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div class="right-panel">
       <div class="login-box">
         <h2>Login</h2>
-        <form method="post" action="">
+        <form method="post" action="/">
           <input id="username" name="username" type="text" placeholder="Username or Email">
           <input id="password" name="password" type="password" placeholder="Password">
           <select>
